Add repository connector descriptions
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -235,7 +235,7 @@
             </div>
             <div class="tx-hero__content">
                 <h1>{{ config.site_name }}</h1>
-                <h3>Making metadata open: {{ config.site_description }}.</h3>
+                <h3>{{ config.site_description }}.</h3>
                 <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | striptags }}" class="md-button md-button--primary">
                     Learn more
                 </a>
@@ -253,9 +253,9 @@
             Open
         </h2>
         <p>
-            Egeria implements a set of open APIs, metadata types,
-            frameworks, connectors and interchange protocols to allow all types of tools and
-            metadata repositories to share and exchange metadata.
+            Egeria defines the open metadata standard schema for over 800 types of metadata needed by enterprises to manage their digital resources.
+            It implements open APIs, frameworks, connectors and interchange protocols for these standard types to allow tools and
+            metadata repositories to share and exchange metadata using these open standards.
         </p>
     </div>
     <div class="feature-item">
@@ -265,9 +265,9 @@
         </h2>
         <p>
             It is expensive (and error prone) to expect individuals to
-            maintain a metadata catalog by hand.  Egeria helps to
-            automate metadata management through its specialist
-            governance servers that extract and synchronize metadata with different technologies.
+            maintain a metadata catalog by hand.  Egeria
+            automates metadata capture, search and management through its specialist
+            servers that extract, store and synchronize metadata with different technologies.
         </p>
     </div>
     <div class="feature-item">
@@ -276,9 +276,10 @@
             Connected
         </h2>
         <p>
-            Egeria's open connectivity enables a peer-to-peer Metadata Highway offering
+            Egeria's open connectivity enables a peer-to-peer <i>metadata highway</i> offering
             open metadata exchange, linking and federation between
             heterogeneous metadata repositories.
+            Partners and colleagues who use different tools can now collaborate and share knowledge.
         </p>
     </div>
     <div class="feature-item">
