Add link to top level
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/overrides/404.html
+++ b/site/overrides/404.html
@@ -41,6 +41,8 @@
 <p>
     We will do our best to fix it as quickly as possible!
 </p>
+<p><a href="/">Return to the main page</a></p>
+
 {% endblock %}
 
 <!-- Disqus integration -->
