--- a/site/overrides/404.html
+++ b/site/overrides/404.html
@@ -32,14 +32,15 @@
     It is very likely that you've reached this page because we missed updating one of
     our links.
     <br><br>
-    Please <a href="https://github.com/odpi/issues" target="issue">raise an issue</a> indicating:
+    Please <a href="https://github.com/odpi/egeria-docs/issues" target="issue">check the existing issues</a> to see if this is already reported. If not, please raise a new issue indicating:
 </p>
 <ul>
     <li>The URL of the page that the broken link appears on.</li>
     <li>The link on that page (right-click, and copy it) that is broken.</li>
 </ul>
 <p>
-    We will do our best to fix it as quickly as possible!
+    We will do our best to fix it as quickly as possible, or you can suggest a fix via a PR yourself,
+    which the team would really appreciate!
 </p>
 <p><a href="/">Return to the main page</a></p>
 
