Issue #382 Link to github corrected

--- a/site/overrides/404.html
+++ b/site/overrides/404.html
@@ -32,7 +32,7 @@
     It is very likely that you've reached this page because we missed updating one of
     our links.
     <br><br>
-    Please <a href="https://github.com/odpi/issues" target="issue">raise an issue</a> indicating:
+    Please <a href="https://github.com/odpi/egeria-docs/issues" target="issue">raise an issue</a> indicating:
 </p>
 <ul>
     <li>The URL of the page that the broken link appears on.</li>
