Restructure governance action services
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -264,7 +264,7 @@
             Automated
         </h2>
         <p>
-            It is expensive (and error prone) to expect individuals to
+            It is expensive (and error-prone) to expect individuals to
             maintain a metadata catalog by hand.  Egeria
             automates metadata capture, search and management through its specialist
             servers that extract, store and synchronize metadata with different technologies.
