--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -104,7 +104,7 @@
     }
 
     .feature-item h2 {
-        color: #333;
+        color: var(--md-typeset-color);
         font-weight: 300;
         font-size: 25px;
         white-space: nowrap;
@@ -120,7 +120,7 @@
         line-height: 1.8em;
         text-rendering: optimizeLegibility;
         -webkit-font-smoothing: antialiased;
-        color: #111;
+        color: var(--md-typeset-color);
         margin: 0 0 10px;
         display: block;
     }
@@ -138,7 +138,7 @@
         line-height: 1.8em;
         text-rendering: optimizeLegibility;
         -webkit-font-smoothing: antialiased;
-        color: #111;
+        color: var(--md-typeset-color);
         margin: 0 0 10px;
         display: block;
     }
