git553 change button on main page
Signed-off-by: David Radley <david_radley@uk.ibm.com>

--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -245,7 +245,7 @@
                     Learn more
                 </a>
                 <a href="{{ config.repo_url }}" title="{{ lang.t('source.link.title') }}" class="md-button">
-                    Go to GitHub
+                    Star on GitHub
                 </a>
             </div>
         </div>
