add github as src, header widget info
Signed-off-by: Ljupcho Palashevski <lpalashevski@gmail.com>

--- a/site/overrides/main.html
+++ b/site/overrides/main.html
@@ -14,7 +14,7 @@
 {% block site_meta %}
   <meta 
   http-equiv="Content-Security-Policy" 
-  content="default-src 'self' 
+  content="default-src 'self' https://api.github.com;
   font-src 'self' https://fonts.gstatic.com; 
   img-src 'self' data: https://live-lfprojects3.linuxfoundation.org; 
   child-src 'self'; 
