--- a/site/overrides/main.html
+++ b/site/overrides/main.html
@@ -17,7 +17,7 @@
   content="default-src 'self' https://api.github.com;
   font-src 'self' https://fonts.gstatic.com; 
   img-src 'self' data: https://live-lfprojects3.linuxfoundation.org; 
-  child-src 'self' https://calendar.google.com/;
+  child-src 'self' https://calendar.google.com/ https://www.youtube.com/;
   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
   script-src 'self' 'unsafe-inline';"
   />
