Updates to API list
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -261,21 +261,19 @@
             Open
         </h2>
         <p>
-            Egeria defines the open metadata standard schema for over 600 metadata types needed by enterprises to manage their digital business.
-            It used open formats to implements open APIs, frameworks, connectors and interchange protocols for these standard types to allow tools and
-            metadata repositories to share and exchange metadata using these open standards.
+            Egeria defines the open metadata standard schema for over 600 types needed by enterprises to manage context about their digital business.
+            It uses open formats to implement APIs, frameworks, connectors and interchange protocols to enable tools and
+            repositories to actively interoperate using these open standards.
         </p>
     </div>
     <div class="feature-item">
         <h2>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70 70"><circle transform="matrix(1 -.003316 .003316 1 -.1074 .108)" cx="32.5" cy="32.5" r="32.5" fill="#00bad6"/><g fill="#fff"><path d="M27.7 14.2c.2.3.5.6.5.9 0 1.5 1 1.8 2.3 1.9 1 .2 2.1.4 3.1.8.8.2 1.5.2 2-.7s1.2-1 2-.3 1.5 1.1 2.3 1.6c.6.2.9.9.6 1.5-.1.2-.2.3-.3.4-.7.8-.5 1.4 0 2.1a34.47 34.47 0 0 1 2 3.2c.4.7.8 1.2 1.7.9 1.2-.3 1.7.3 1.8 1.4l.4 2.4c.2.9-.1 1.3-1.1 1.4-5 .4-8.8 3.6-9.8 8.3-.2 1.6-.2 3.1 0 4.7 0 .6.1 1-.5 1.2-.7.2-1 .9-.8 1.6v.1c.3 1.1-.3 1.7-1.3 1.8-.8.1-1.6.2-2.4.4-1 .3-1.7-.1-1.8-1.2s-.6-1.3-1.5-1.5c-1.2-.2-2.5-.5-3.7-.8-.9-.3-1.5-.3-2 .7s-1.1.9-1.9.4-1.6-1.1-2.4-1.7-1-1.2-.3-1.8c.8-.9.5-1.5-.1-2.3-.7-1-1.4-2-1.9-3.1-.4-.7-.9-1.1-1.7-.9-1.1.3-1.7-.2-1.8-1.3-.1-.8-.2-1.6-.4-2.4-.3-1 .1-1.7 1.2-1.8s1.3-.7 1.4-1.6c.2-1.2.5-2.4.8-3.6.3-.9.3-1.5-.6-2.1-.6-.2-.9-.9-.6-1.5.1-.2.2-.3.3-.4.6-.8 1.1-1.6 1.7-2.4.3-.6 1-.8 1.5-.5.1.1.3.2.4.3.8.7 1.4.5 2.1-.1 1-.7 2-1.4 3.1-1.9.8-.4 1.3-.9 1-1.9s.2-1.5 1.2-1.7 1.8-.4 2.7-.5h.8zM36.3 32c0-4.4-3.7-8-8.1-7.9-4.4 0-8 3.7-7.9 8.1 0 4.4 3.6 7.9 8 7.9s8-3.5 8-7.8V32zm8.1 19.1c-.4-.1-.7-.3-1.1-.4-4.6-1.3-7.2-6.1-5.9-10.7s6.1-7.2 10.7-5.9c2.8.8 4.9 2.9 5.8 5.7l.4 1.3v2.7c-.5 2.8-2.4 5.2-4.9 6.5l-2.3.9-2.7-.1zM42.9 47l7.8-4.5-7.8-4.5v9z"/><path d="M47.1 51.1c.8-.3 1.6-.5 2.3-.9 2.6-1.3 4.4-3.6 4.9-6.5V51l-7.2.1z"/></g></svg>
-            Automated
+            Insightful
         </h2>
         <p>
-            It is expensive (and error-prone) to expect individuals to
-            maintain a metadata catalog by hand.  Egeria
-            automates metadata capture, search and management through its specialist
-            servers that extract, store and synchronize metadata with different technologies.
+            Egeria automates the capture, analysis, search, and management of metadata and context through its specialist
+            servers that actively extract, store and synchronize information between different technologies.
         </p>
     </div>
     <div class="feature-item">
@@ -298,7 +296,7 @@
         <p>
             While providing numerous types and connectors directly through the project,
             the frameworks involved are all designed to be pluggable and easily extensible
-            to support your own types, variations and systems to which you want to connect.
+            to support your own types, variations and systems in the .
         </p>
     </div>
 </div>
